# polynomial-roots

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: bin.rs  constants.rs  lib.rs  main.rs  math.rs  polynomials.rs
src/false_position/: couchy.rs  mod.rs
src/linear/: mod.rs
src/quadratic/: mod.rs
